--- a/mountain/assets/css/mountains.css
+++ b/mountain/assets/css/mountains.css
@@ -12,7 +12,7 @@
     flex-flow: row nowrap;
     justify-content: space-between;
 }
-h3{
+.main-intro h3{
     font-size: 24px;
     display: block;
     margin: 30px 0;
@@ -29,7 +29,7 @@ h3{
 .content-p {
     display: flex;
     flex-flow: column nowrap;
-    font-size: 18px;
+    font-size: 16px;
   
 }
 .titles {
@@ -57,11 +57,14 @@ h3{
     width: 100%;
 } 
 
-.info {
+.mountainpage-info {
     margin-top: 20px;
     font-size: 16px;
     line-height: 1.5;
 }
+
+
+
 
 .weather-map-container {
     width: 80%;
@@ -160,10 +163,10 @@ h3{
 }
 
 
-.today-weather div:last-child h5,
+/* .today-weather div:last-child h5,
 .today-weather div:last-child p {
     text-align: left;
-}
+} */
 
 .other-weather {
     display: flex;
@@ -234,3 +237,110 @@ h3{
 .recommand div {
     width: 95%;
 }
+
+
+ @media screen and (max-width: 1024px) {
+    .main-intro{
+        width: 90%;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    h3{
+        font-size: 20px;
+        margin: 15px;
+    }
+    .content-p {
+        font-size: 14px;
+    }
+    .weather-map-container{
+        width: 90%;
+    }
+    .item-container{
+        width: 90%;
+    }
+    .weather-map-h{
+        font-size: 20px;
+    }
+    .weather-item, .map-item{
+        font-size: 16px;
+        width: 49%;
+    }
+    .check{
+        height: 60px;
+        border-bottom: 10px solid white;
+        width: 50%;
+        font-size: 22px;
+    } 
+    .weather {
+        font-size: 14px;
+    } 
+    .weather p{
+        font-size: 14px;
+    } 
+    .today-weather div:last-child h5 b {
+        font-size: 38px;
+    }
+    .today-weather div:last-child{
+        margin: 0 5px;
+    }
+    .other-weather:nth-child(n+5) {
+        display: none;
+    }
+    .weather-map-container{
+        padding: 10px;
+    }
+    .today-weather div:first-child{
+        width: 45%;
+    }
+    .weather .today-weather{
+        width: 55%;
+    }
+    .content{
+        flex-flow: column nowrap;
+        width: 200%;
+    }
+    .title{
+        height: 40px;
+    } 
+    .content-p .titles{
+        height: 40px;
+
+    }
+    .main-intro h3{
+        margin-top: 10px;
+    }
+} 
+
+@media screen and (max-width: 680px) {
+    .other-weather:nth-child(n+4) {
+        display: none;
+    }
+    .weather .today-weather{
+        width: 70%;
+        padding: 10px 0;
+    }
+} 
+
+@media screen and (max-width: 500px) {
+    .other-weather:nth-child(n+3) {
+        display: none;
+    }
+    .weather .today-weather{
+        width: 80%;
+    }
+} 
+
+@media screen and (max-width: 414px) {
+    .other-weather:nth-child(n+1) {
+        display: none;
+    }
+    .weather .today-weather{
+        width: 100%;
+    }
+    .today-weather div:last-child{
+        border: none;
+    }
+}     
+
