--- a/mountain/assets/css/index.css
+++ b/mountain/assets/css/index.css
@@ -68,7 +68,7 @@ nav > div > div:last-child a{
 
 
 .banner {
-    background-image: url('/images/indexbanner.jpg'); 
+    background-image:'/images/indexbanner.jpg'; 
     background-size: cover; 
     background-position: 0 -120px; 
     width: 100%;
