--- a/mountain/assets/css/index.css
+++ b/mountain/assets/css/index.css
@@ -66,7 +66,7 @@ nav > div > div:last-child a{
     text-decoration: none;
 }
 
-.banner {
+section .banner {
     background-image: url('/images/indexbanner.jpg');
     background-size: cover; 
     background-position: 0 -120px; 
