--- a/mountain/assets/css/index.css
+++ b/mountain/assets/css/index.css
@@ -58,7 +58,6 @@ nav > div > div:last-child {
     width: 20%;
     font-size: 20px;
     margin-bottom: 18px;
-   
 }
 
 nav > div > div:last-child a{
@@ -67,15 +66,24 @@ nav > div > div:last-child a{
 }
 
 #b {
-    background-image: url('~/assets/images/indexbanner.jpg'); 
+    /* background-image: url('~/assets/images/indexbanner.jpg'); 
     background-size: cover; 
-    background-position: 0 -120px; 
+    background-position: 0 -120px;  */
     width: 100%;
     height: 46vh;
     display: flex;
     background-repeat: no-repeat;
     justify-content: center; /* 水平居中 */
     align-items: center; /* 垂直居中 */
+    position: relative;
+}
+
+#b img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
 }
 
 .banner > div {
@@ -267,9 +275,6 @@ footer  > div{
 
 
 @media (max-width:788px) {
-    div .banner {
-        background-image: url('/images/indexbanner.jpg');
-    }
     .logo h1{
         font-size: 22px;
     }
